--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -9,7 +9,7 @@
   }
   #mainframe {
     width: 540px;
-    height: 500px;
+    height: auto;
   }
 }
 
@@ -22,7 +22,7 @@
   }
   #mainframe {
     width: 960px;
-    height: 600px;
+    height: auto;
   }
 }
 
@@ -35,7 +35,7 @@
   }
   #mainframe {
     width: 1160px;
-    height: 800px;
+    height: auto;
   }
 }
 
@@ -48,7 +48,7 @@
   }
   #mainframe {
     width: 1350px;
-    height: 960px;
+    height: auto;
   }
 }
 
@@ -61,7 +61,7 @@
   }
   #mainframe {
     width: 1550px;
-    height: 960px;
+    height: auto;
   }
 }
 
@@ -653,6 +653,7 @@ tr {
   border-top-right-radius: 4px;
   color: white;
   font-weight: 800;
+  font-size: 1.1em;
 }
 
 .tooltip > .title.red {
@@ -665,11 +666,20 @@ tr {
   font-weight: 800;
 }
 
+.tooltip > .title.myRegion {
+  margin: auto;
+  background-color: yellow;
+  padding: 2px 8px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  color: black;
+  font-weight: 800;
+}
+
 .tooltip > .content {
   margin: auto;
   padding: 1px 8px;
-  font-size: 0.75em;
-  font-size: 0.8em;
+  font-size: 1em;
 }
 /* End of styles for tooltips */
 
