--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -56,7 +56,7 @@ html, body {
   }
 }
 
-@media only screen and (min-width: 1561px) {
+@media only screen and (min-width: 1561px) and (max-width: 2000px) {
   body {
     font-size: 18px;
   }
@@ -68,6 +68,35 @@ html, body {
     height: 100%;
   }
 }
+
+@media only screen and (min-width: 2001px) {
+  body {
+    font-size: 19px;
+  }
+  #menutop {
+    width: 1850px;
+  }
+  #mainframe {
+    width: 1850px;
+    height: 100%;
+  }
+}
+
+/* Styles for svg elements and svg container elements */
+svg {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.cont_svg {
+  clear: both;
+  width: 98%;
+  height: 0;
+  padding-top: 48%;
+  position: relative;
+}
+/* End of styles for svg elements and svg container elements */
 
 body.loading {
   background-color: #e5edf8;
@@ -328,6 +357,11 @@ span.link:hover {
   display: inherit;
 }
 /* End of styles for completness section */
+.cont_btn {
+  margin: 0.4em 5em;
+  display: inline-block;
+}
+
 .button_blue {
     display: inline-block;
     text-align: center;
@@ -360,19 +394,20 @@ span.link:hover {
     background: linear-gradient(to bottom, #3f6797, #3f6797);
 }
 
-#menu_selection > .button_blue {
+/*#menu_selection > .button_blue {
   margin: 0.4em 5em;
-}
+}*/
 /* End of styles for buttons */
 
 #menu_selection {
   font-size: 0.75em;
   font-family: "Signika",sans-serif;
+  padding: 0em 1em 0.5em;
 }
 
 /* Styles for buttons on the top of the map */
 .map_button {
-  margin: 5px 7px 0px 7px;
+  margin: -0.2em 0.3em 0 0.3em;
   float: left;
   filter: opacity(25%);
   cursor: pointer;
@@ -512,6 +547,7 @@ tr {
 /* Styles for map header */
 #header_map {
   width: 99%;
+  margin-bottom: 5%;
 }
 /* End of styles for map header */
 
@@ -637,7 +673,7 @@ tr {
 /* Styles for tooltips */
 .tooltip {
   pointer-events: none;
-  position: absolute;
+  position: fixed;
   background-color: rgba(245, 245, 220, 0.85);
   padding: 0px 0px 5px 0px;
   margin: auto;
@@ -690,7 +726,7 @@ tr {
 /* Styles for map tooltips */
 .tooltip_map, .tooltip-black {
   pointer-events: none;
-  position: absolute;
+  position: fixed;
   background-color: black;
   padding: 5px 8px;
   margin: auto;
