Reversed axis on radar chart when adding new variables + exit selection on scatterplot

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -21,6 +21,9 @@ html, body {
   .img_scale {
     transform: scale(0.6);
   }
+  .cont_btn {
+    margin: 0.4em 3em !important;
+  }
 }
 
 @media only screen and (min-width: 960px) and (max-width: 1160px) {
@@ -39,6 +42,9 @@ html, body {
   }
   .img_scale {
     transform: scale(0.75);
+  }
+  .cont_btn {
+    margin: 0.4em 3em !important;
   }
 }
 
@@ -59,6 +65,9 @@ html, body {
   .img_scale {
     transform: scale(0.75);
   }
+  .cont_btn {
+    margin: 0.4em 3em !important;
+  }
 }
 
 @media only screen and (min-width: 1361px) and (max-width: 1560px) {
@@ -74,6 +83,9 @@ html, body {
   }
   .img_scale_logo {
     width: 8em;
+  }
+  .cont_btn {
+    margin: 0.4em 3.5em !important;
   }
 }
 
@@ -213,6 +225,10 @@ body {
 
 .axis--y > g.tick > line, .axis--x > g.tick > line{
   stroke: #BEBEBE;
+}
+
+.tick > text {
+  font-size: 11px;
 }
 /* End of styles for svg elements */
 
