--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -22,8 +22,12 @@ html, body {
     transform: scale(0.6);
   }
   .cont_btn {
-    margin: 0.4em 3em !important;
+    margin: 0.4em 2em !important;
   }
+  .minitable > tbody > tr > td, .minitable > thead > tr > th  {
+    padding: 0.4em 0.2em !important;
+  }
+
 }
 
 @media only screen and (min-width: 960px) and (max-width: 1160px) {
@@ -44,7 +48,10 @@ html, body {
     transform: scale(0.75);
   }
   .cont_btn {
-    margin: 0.4em 3em !important;
+    margin: 0.4em 2em !important;
+  }
+  .minitable > tbody > tr > td, .minitable > thead > tr > th  {
+    padding: 0.4em 0.3em !important;
   }
 }
 
@@ -66,7 +73,10 @@ html, body {
     transform: scale(0.75);
   }
   .cont_btn {
-    margin: 0.4em 3em !important;
+    margin: 0.4em 2.5em !important;
+  }
+  .minitable > tbody > tr > td, .minitable > thead > tr > th  {
+    padding: 0.4em 0.4em !important;
   }
 }
 
@@ -104,7 +114,7 @@ html, body {
     width: 8em;
   }
   .cont_btn {
-    margin: 0.4em 4.75em !important;
+    margin: 0.4em 4em !important;
   }
 }
 
@@ -260,13 +270,13 @@ div.tingle-modal-box__content {
 }
 
 #menu > div.box > p, #menu > div.box > div > p {
-  font-size: 0.8em;
+  font-size: 0.85em;
   padding: 1px 1px 1px 8px;
   margin: 0;
 }
 
 #menu > div.box > p.small, #menu > div.box > div > p.small {
-  font-size: 0.75em;
+  font-size: 0.8em;
   margin-left: 0.7em;
   color: rgba(0, 0, 0, 0.8);
 }
@@ -399,7 +409,7 @@ span.link:hover {
 }
 /* End of styles for completness section */
 .cont_btn {
-  margin: 0.4em 5em;
+  margin: 0.4em 4em;
   display: inline-block;
 }
 
@@ -441,7 +451,7 @@ span.link:hover {
 /* End of styles for buttons */
 
 #menu_selection {
-  font-size: 0.8em;
+  font-size: 0.85em;
   font-family: "Signika",sans-serif;
   padding: 0em 1em 0.5em;
 }
