--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -252,6 +252,11 @@ span.i_info {
   cursor: help;
 }
 
+p.disabled > span.i_info {
+  color: lightgray !important;
+  cursor: initial;
+}
+
 div.tingle-modal-box__content {
   padding: 1rem 2rem 2rem 2rem !important;
 }
@@ -349,6 +354,36 @@ span.link {
 span.link:hover {
      text-decoration:none;
      text-shadow: 1px 1px 1px #555;
+}
+
+p.disabled {
+  color: lightgray;
+  font-style: italic;
+}
+
+span.minibutton {
+  background-color: #96b4d8;
+  color: white;
+  padding: 1px 2px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 0px 2px;
+  font-size: 0.8em;
+  border-radius: 0.3em;
+  font-weight: 800;
+}
+
+#curr_regio_level {
+  position: relative;
+  float: right;
+  margin-right: 1em;
+  margin-top: 0.25em;
+  font-size: 0.7em;
+  font-weight: 600;
+  color: #3b6393;
+  z-index: 1001;
+  word-spacing: 0.25em;
 }
 /* End on styles for left menu */
 
