--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -358,7 +358,7 @@ span.link:hover {
 
 p.disabled {
   color: lightgray;
-  font-style: italic;
+  cursor: not-allowed;
 }
 
 span.minibutton {
@@ -377,13 +377,13 @@ span.minibutton {
 #curr_regio_level {
   position: relative;
   float: right;
-  margin-right: 1em;
+  margin-right: 0.8em;
   margin-top: 0.25em;
   font-size: 0.7em;
   font-weight: 600;
   color: #3b6393;
   z-index: 1001;
-  word-spacing: 0.25em;
+  word-spacing: 0.2em;
 }
 /* End on styles for left menu */
 
@@ -462,7 +462,7 @@ span.minibutton {
     background: -webkit-gradient(linear, left top, left bottom, from(#67a8f6), to(#3f6797));
     background: -moz-linear-gradient(top, #67a8f6, #3f6797);
     background: linear-gradient(to bottom, #67a8f6, #3f6797);
-    font: normal normal normal 0.8em 'Signika', sans-serif;
+    font: normal normal normal 0.85em 'Signika', sans-serif;
     color: #ffffff;
     text-decoration: none;
 }
@@ -1012,7 +1012,7 @@ span.arrow_right:before {
 #search {
   position: absolute;
   z-index: 11;
-  width: calc(90% - 7em);
+  width: calc(91% - 7em);
   background: rgba(255,255,255,0.4);
   color: white;
 }
@@ -1020,7 +1020,7 @@ span.arrow_right:before {
 #autocomplete {
   position: absolute;
   z-index: 10;
-  width: calc(90% - 7em);
+  width: calc(91% - 7em);
   background: rgb(79, 129, 189);
   color: black;
 }
