--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -555,9 +555,14 @@ span.i_regio {
 }
 
 #type_dist {
-  font-size: 0.85em;
+  color: rgb(100, 136, 156);
+  display: inline-block;
   font-family: "Signika",sans-serif;
+  font-size: 0.8em;
+  line-height: 0.65em;
   padding: 0em 1em 0.5em;
+  position: absolute;
+  z-index: 1000;
 }
 
 /* Styles for buttons on the top of the map */
@@ -1171,12 +1176,9 @@ h3 {
 .cont_radio {
     display: block;
     position: relative;
-    padding-left: 35px;
-    margin-bottom: 12px;
+    padding-left: 1.5em;
+    margin-bottom: 1em;
     cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
     user-select: none;
 }
 
@@ -1190,10 +1192,10 @@ h3 {
 /* Create a custom radio button */
 .checkmark {
     position: absolute;
-    top: 0;
+    top: -3px;
     left: 0;
-    height: 20px;
-    width: 20px;
+    height: 15px;
+    width: 15px;
     background-color: #eee;
     border-radius: 50%;
 }
@@ -1222,12 +1224,45 @@ h3 {
 
 /* Style the indicator (dot/circle) */
 .cont_radio .checkmark:after {
-  top: 6px;
-  left: 6px;
-  width: 8px;
-  height: 8px;
+  top: 5px;
+  left: 5px;
+  width: 5px;
+  height: 5px;
   border-radius: 50%;
   background: white;
 }
 
 /* End of style for custom radio buttons */
+
+/* Styles for spinner while recalculating chart */
+#overlay {
+  background: #d3d3d380 none repeat scroll 0% 0%;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  text-align: center;
+  position: fixed;
+  z-index: 100;
+}
+
+@keyframes spinner2 {
+  to {transform: rotate(360deg);}
+}
+
+.spinner2:before {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 40px;
+  height: 40px;
+  margin-top: -10px;
+  margin-left: -10px;
+  border-radius: 50%;
+  border: 4px solid transparent;
+  border-top-color: #07d;
+  border-bottom-color: #07d;
+  animation: spinner2 .8s ease infinite;
+}
+/* End of styles for spinner while recalculating chart */
