--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -22,7 +22,7 @@ html, body {
     transform: scale(0.6);
   }
   .cont_btn {
-    margin: 0.4em 2em !important;
+    margin: 0.2em 1.4em !important;
   }
   .minitable > tbody > tr > td, .minitable > thead > tr > th  {
     padding: 0.4em 0.2em !important;
@@ -48,7 +48,7 @@ html, body {
     transform: scale(0.75);
   }
   .cont_btn {
-    margin: 0.4em 1.5em !important;
+    margin: 0.2em 1.4em !important;
   }
   .minitable > tbody > tr > td, .minitable > thead > tr > th  {
     padding: 0.4em 0.3em !important;
@@ -73,7 +73,7 @@ html, body {
     transform: scale(0.75);
   }
   .cont_btn {
-    margin: 0.4em 2.5em !important;
+    margin: 0.2em 1.7em !important;
   }
   .minitable > tbody > tr > td, .minitable > thead > tr > th  {
     padding: 0.4em 0.4em !important;
@@ -95,7 +95,7 @@ html, body {
     width: 8em;
   }
   .cont_btn {
-    margin: 0.4em 3.2em !important;
+    margin: 0.25em 1.8em !important
   }
 }
 
@@ -114,7 +114,7 @@ html, body {
     width: 8em;
   }
   .cont_btn {
-    margin: 0.4em 4em !important;
+    margin: 0.3em 2em !important
   }
 }
 
@@ -1074,7 +1074,8 @@ span.arrow_right:before {
 .regio_name > p {
   margin: auto;
   display: inline-block;
-  padding: 6px;
+  padding: 5px 2px;
+  font-size: 0.8em;
 }
 
 .regio_name > input {
