--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -13,7 +13,7 @@ html, body {
   }
   #mainframe {
     width: 540px;
-    height: 100%;
+    /* height: 100%; */
   }
   .img_scale_logo {
     width: 5.5em;
@@ -39,7 +39,7 @@ html, body {
   }
   #mainframe {
     width: 960px;
-    height: 100%;
+    /* height: 100%; */
   }
   .img_scale_logo {
     width: 6em;
@@ -64,7 +64,7 @@ html, body {
   }
   #mainframe {
     width: 1160px;
-    height: 100%;
+    /* height: 100%; */
   }
   .img_scale_logo {
     width: 7em;
@@ -89,7 +89,7 @@ html, body {
   }
   #mainframe {
     width: 1350px;
-    height: 100%;
+    /* height: 100%; */
   }
   .img_scale_logo {
     width: 8em;
@@ -108,7 +108,7 @@ html, body {
   }
   #mainframe {
     width: 1550px;
-    height: 100%;
+    /* height: 100%; */
   }
   .img_scale_logo {
     width: 8em;
@@ -127,7 +127,7 @@ html, body {
   }
   #mainframe {
     width: 1750px;
-    height: 100%;
+    /* height: 100%; */
   }
   .img_scale_logo {
     width: 8em;
@@ -162,8 +162,9 @@ body {
 }
 
 #mainframe {
-  margin: auto;
   clear: both;
+  height: auto;
+  margin: auto;
 }
 
 #menutop {
