--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1172,7 +1172,8 @@ h3 {
 
 /* Styles for guided tour */
 .steptour {
-  font-size: 0.8em;
+  font-family: 'Signika', sans-serif;
+  font-size: 0.9em;
   max-width: 450px;
 }
 
